Fix excessive mobile CV row spacing

--- a/style.css
+++ b/style.css
@@ -319,7 +319,7 @@ span {
 }
 
 @media (max-width: 992px) {
-  .content .row {
+  .content > .row {
     flex-direction: column;
   }
 
